@@ -1378,6 +1378,11 @@ CBTMSGS=OFF
 # are disabled, all new players will be set to "PlayerClass" if it exists, 
 # or  StdCharClass otherwise.
 # 
+# STDRACES, STDCLASSES 
+# If you want to quickly turn off standard player races and/or classes and 
+# start building your own generic ones from scratch, you can expel them from 
+# character creation (but not from magical effects) with this.
+#
 # CONNSPAMBLOCK
 # Disable the subsystem that prevents numerous mud connections from the
 # same ip address in a short timespan.
